Fix vertical scroll for content overflow-y
# Conflicts:
#	assets/sass/pages/problem_types.scss

--- a/assets/sass/pages/problem_types.scss
+++ b/assets/sass/pages/problem_types.scss
@@ -7,6 +7,8 @@
 
 #list-view {
 	flex: 2;
+	display: flex;
+	flex-direction: column;
 
 	#table-section {
 		display: none;
